
- Implemented first working LOCK and UNLOCK
  [Simon Pamies]

- Fixed MKCOL answer to 201
  [Jesus Cea]

- Fixed MSIE webdav headers
  [Jesus Cea]

- Make propfind respect the depth from queries
  [Cédric Krier]

- Add ETag in the header of GET. This is needed to implement 
  GroupDAV, CardDAV and CalDAV.
  [Cédric Krier]

- Handle the "Expect 100-continue" header
  [Cédric Krier]

- Remove debug statements and remove logging
  [Cédric Krier]

- Use the Host header in baseuri if set.
  [Cédric Krier]

- Adding If-Match on PUT and DELETE
  [Cédric Krier]

0.9.1 (May 4th 2009)
--

- Restructured the structure a bit: Made server package
  a real python package. Adapted error messages. Prepared
  egg distribution.
  [Simon Pamies]

- Fix for time formatting bug. Thanks to Ian Kallen
  [Simon Pamies]

- Small fixes for WebDavServer (status not handled correctly) and
  propfind (children are returned from a PROPFIND with "Depth: 0")
  [Kjetil Ørbekk]

0.8 (Jul 15th 2008)
---

- First try of an implementation of the LOCK and UNLOCK features.
  Still very incomplete (read: very incomplete) and not working
  in this version.
  [Simon Pamies]

- Some code cleanups to prepare restructuring
  [Simon Pamies]

- Port to minidom because PyXML isn't longer maintained
  [Martin v. Loewis]

- utils.py: Makes use of DOMImplementation class to create a new xml document
  Uses dom namespace features to create elements within DAV: namespace
  [Stephane Bonhomme]

- davcmd.py: Missing an indent in loop on remove and copy operations on trees, the
  effect was that only the last object was removed/copied : always leads
  to a failure when copying collections.
  [Stephane Bonhomme]

- propfind.py: missing a return at the end of the createResponse method (case of a
  propfind without xml body, should act as a allprops).
  [Stephane Bonhomme]

0.7
---

- Added MySQL auth support brought by Vince Spicer
- Added INI file support also  introduced by Vince